--- a/templates/tde.html
+++ b/templates/tde.html
@@ -54,7 +54,7 @@
       <!-- Header -->
       <header class="w3-container w3-center" style="padding: 64px 16px">
 	<h1 class="w3-margin w3-jumbo">{{ tde.name }}</h1>
-	<p class="w3-xlarge">TiDE Catalog Data for {{ tde.name }}</p>
+	<p class="w3-xlarge">OTTER Catalog Data for {{ tde.name }}</p>
       </header>
       
       <div class="w3-container w3-center">
