update API to be more flexible

--- a/templates/tde.html
+++ b/templates/tde.html
@@ -53,8 +53,8 @@
 
       <!-- Header -->
       <header class="w3-container w3-center" style="padding: 64px 16px">
-	<h1 class="w3-margin w3-jumbo">{{ tde.name }}</h1>
-	<p class="w3-xlarge">OTTER Catalog Data for {{ tde.name }}</p>
+	<h1 class="w3-margin w3-jumbo">{{ tde.name.name }}</h1>
+	<p class="w3-xlarge">OTTER Catalog Data for {{ tde.name.name }}</p>
       </header>
       
       <div class="w3-container w3-center">
