--- a/templates/tde.html
+++ b/templates/tde.html
@@ -42,12 +42,12 @@
 	<div class="w3-bar w3-white w3-card w3-left-align w3-large">
 	  <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-grey w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
 	  <a href="{{ url_for('catalog.home') }}" class="w3-bar-item w3-button w3-padding-large w3-white">Catalog Home</a>
-	  <a href="https://github.com/noahfranz13/tide" target="_blank" class="w3-bar-item w3-button w3-hide-small w3-padding-large">API</a>
+	  <a href="https://github.com/noahfranz13/otter" target="_blank" class="w3-bar-item w3-button w3-hide-small w3-padding-large">API</a>
 	</div>
 	
 	<!-- Navbar on small screens -->
 	<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-	  <a href="https://github.com/noahfranz13/tide" target="_blank" class="w3-bar-item w3-button w3-padding-large">API</a>
+	  <a href="https://github.com/noahfranz13/otter" target="_blank" class="w3-bar-item w3-button w3-padding-large">API</a>
 	</div>
       </div>
 
@@ -73,7 +73,7 @@
 	  </div>
 	  <div class="w3-container w3-third w3-center">
             <h3>Information</h3>
-	    <table><tr><th>Property</th><th>Value</th></tr>{{ tde.__str__()|safe }}</table>
+	    <table><tr><th style='text-align:left'>Property</th><th style='text-align:left'>Value</th></tr>{{ tde.__repr__(html=True)|safe }}</table>
           </div>
 	{% elif tde['photometry'] is defined and tde['spectra'] is not defined %}
 	  <div class="w3-container w3-half w3-center">
@@ -84,7 +84,7 @@
 	  </div>
 	  <div class="w3-container w3-half w3-center">
             <h3>Information</h3>
-	    <table><tr><th>Property</th><th>Value</th></tr>{{ tde.__str__()|safe }}</table>
+	    <table><tr><th style='text-align:left'>Property</th><th style='text-align:left'>Value</th></tr>{{ tde.__repr__(html=True)|safe }}</table>
           </div>
 	{% elif tde['photometry'] is not defined and tde['spectra'] is defined %}
 	  <div class="w3-container w3-half w3-center">
@@ -95,12 +95,12 @@
 	  </div>
 	  <div class="w3-container w3-half w3-center">
             <h3>Information</h3>
-	    <table><tr><th>Property</th><th>Value</th></tr>{{ tde.__str__()|safe }}</table>
+	    <table><tr><th style='text-align:left'>Property</th><th style='text-align:left'>Value</th></tr>{{ tde.__repr__(html=True)|safe }}</table>
           </div>
 	{% else %}
 	  <div class="w3-container w3-center">
             <h3>Information</h3>
-	    <table><tr><th>Property</th><th>Value</th></tr>{{ tde.__str__()|safe }}</table>
+	    <table><tr><th style='text-align:left'>Property</th><th style='text-align:left'>Value</th></tr>{{ tde.__repr__(html=True)|safe }}</table>
           </div>
 	{% endif %}
 	</table>
